need to make the bosses now and player

--- a/OO with Polymorphism/OO with Polymorphism.vcxproj
+++ b/OO with Polymorphism/OO with Polymorphism.vcxproj
@@ -116,11 +116,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DMC_boss.cpp" />
+    <ClCompile Include="Goliath.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DMC_boss.h" />
     <ClInclude Include="functions.h" />
+    <ClInclude Include="Goliath.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
