--- a/OO with Polymorphism/OO with Polymorphism.vcxproj.filters
+++ b/OO with Polymorphism/OO with Polymorphism.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="DMC_boss.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Goliath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="DMC_boss.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Goliath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
